--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 SAMPLE_RATE=16000
-API_URL="http://127.0.0.1:8000"
-GAR_IMAGE="music_transcriber"
+GAR_IMAGE=music_transcriber
 GCP_REGION=europe-west1
